cleanup commit before checking out to confirm if z-index fix commit is causing camera issue

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -113,10 +113,6 @@ transform-origin: 50% 50%;
  	height: 100%;
  	width: 90%;
  }
- .ui-draggable
- {
-
- }
 
 #slideout {
   position: fixed;
